--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-  background: rgb(17 24 39 / 1);
+  background: rgb(29 29 30 / 1); /* after effects bg color */
   font-family: Arial, Helvetica, sans-serif;
 }
