--- a/plainly-plugin/src/ui/index.css
+++ b/plainly-plugin/src/ui/index.css
@@ -12,12 +12,15 @@ body {
 }
 body::-webkit-scrollbar {
   width: 7px;
+  height: 7px;
 }
 ::-webkit-scrollbar {
   width: 7px;
+  height: 7px;
 }
 ::-webkit-scrollbar-thumb {
   width: 7px;
+  height: 7px;
   background: rgb(75 75 75 / 1);
   border-radius: 3.5px;
 }
