--- a/plainly-plugin/src/ui/index.css
+++ b/plainly-plugin/src/ui/index.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --color-bg-primary: 29, 29, 30;
+    --color-bg-secondary: 43, 43, 43;
+  }
+}
+
 body {
-  background: rgb(29 29 30 / 1); /* after effects bg color */
+  background: rgb(var(--color-bg-primary)); /* after effects bg color */
   font-family: Arial, Helvetica, sans-serif;
 }
 
